# blitzbeaver

./: .gitignore  Cargo.toml  notes.md  pyproject.toml  readme.md
data/json_files/: chunk_0_49.json  chunk_50_99.json
notebooks/: analyse_metrics.ipynb  benchmarks.ipynb  compute_metrics.ipynb  manual_metrics.ipynb  metrics.ipynb  test.ipynb
python/beaver/: __init__.py  beaver.pyi  data_cleaning.py
python/blitzbeaver/: __init__.py  blitzbeaver.pyi  config.py  exceptions.py  literals.py  tracking_graph.py
results/: configs.md
src/: api.rs  distances.rs  engine.rs  frame.rs  id.rs  lib.rs  normalization.rs  record.rs  resolvers.rs  tracker.rs  trackers.rs  tracking_engine.rs  word.rs
src/api/: api.rs  beaver.rs  casting.rs  config.rs  diagnostics.rs  evaluation.rs  genealogy.rs  schema.rs  tracking.rs  tracking_graph.rs
src/benchmark/: distance.rs
src/distances/: clustering.rs  distance.rs  distance_calculator.rs  distance_matrix.rs  distance_metric.rs  median_word.rs
src/engine/: engine.rs  worker.rs
src/evaluation/: tracking_graph.rs
src/normalization/: engine.rs  normalization.rs
src/resolvers/: best_match_resolving_strategy.rs  resolver.rs  simple_resolving_strategy.rs
src/trackers/: record_scorer.rs  simple_tracker.rs  tracker.rs  tracker_memory.rs
